--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "A backend Project",
+  "description": "A video streaming platform just like Youtube",
   "keywords": [
     "JavaScript",
     "Backend"
@@ -18,6 +18,8 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.16.1"
